# ChangeLog for dev-perl/CSS-Minifier-XS
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  20 Nov 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  +CSS-Minifier-XS-0.04.ebuild, +metadata.xml:
  initial commit
