@@ -1,4 +1,6 @@
 DIST CSS-Minifier-XS-0.04.tar.gz 10160 RMD160 dd75f0503e3b8b30cec8702e79531649830583fb SHA1 a820ae19f3e97888c142a9e2285543451e598416 SHA256 006b08e2e83b485b82563d1a427bc3f713969a2c4bd678569c5cd02daed787ee
+DIST CSS-Minifier-XS-0.05.tar.gz 10181 RMD160 b4708fa158bef85fe3b7b4fa2b44e060991f03ad SHA1 39914b9a720d8ec4a4bfe1a0a60bc26c563b837d SHA256 e8ac4d5943c83cc1cf840f2932bc1422d747f6e6860bd7178e4bea8583be893d
 EBUILD CSS-Minifier-XS-0.04.ebuild 297 RMD160 40fb2ae384415723b39486923ccab03584e484a4 SHA1 320ae06d58ea30f9a582950b9f5bee59fbc97b38 SHA256 3a6738701b9cf2f794f385ec03c605be8e0bb4da89e929759829787d70d8a7e3
-MISC ChangeLog 243 RMD160 779bb1f037ae953b0211748e9282b4123dfb2024 SHA1 f4dc608f948ec13b74f5ebfb558c90239c948681 SHA256 2ede0c2d8bb052405bf5423db02f5511786091abd5efc3cb3f0c63cec032cbe1
+EBUILD CSS-Minifier-XS-0.05.ebuild 297 RMD160 40fb2ae384415723b39486923ccab03584e484a4 SHA1 320ae06d58ea30f9a582950b9f5bee59fbc97b38 SHA256 3a6738701b9cf2f794f385ec03c605be8e0bb4da89e929759829787d70d8a7e3
+MISC ChangeLog 382 RMD160 d07cb0515a950f0a9e55f0b354aba216063e526f SHA1 730defc92ee4b12dc066a609cda10f74d715bf8c SHA256 ce6e2c033f4620a1d120af3f69e26a01b4ca033bb00e577a3016dd3308fcc42e
 MISC metadata.xml 365 RMD160 691018c5ce6e2eb8d9a29c138e5a5fbc0668f323 SHA1 67a86a569a207cf63a2069a93390043436f9f4ff SHA256 d3292c889cc8b28ff8bb1634fcc64079ace9f3dd971358b659a5cd5514af2977
